Sort out screen size change issues when jumping

--- a/T-Rex-Run/style.css
+++ b/T-Rex-Run/style.css
@@ -34,7 +34,7 @@
 
 #desert {
   position: absolute;
-  bottom: 0px;
+  bottom: 300px;
   background-image: url("t-rex-background.png");
   background-repeat: repeat-x;
   animation: slideright 600s infinite linear;
